Update the download page to specify the correct ContentType and filename. Update the web.config to specify the live database. Update the links on the software page to point to the download page so I can track them.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -6,8 +6,8 @@
 	</appSettings>
 	<connectionStrings>
 		<remove name="longueurConnectionString" />
-		<add name="longueurConnectionString" connectionString="Data Source=ADAM-WIN;Initial Catalog=Longueur;Integrated Security=True" />
-	</connectionStrings>	
+		<add name="longueurConnectionString" connectionString="Data Source=sql331.mysite4now.com;Initial Catalog=longueur;Persist Security Info=True;User ID=adparadox;Password=_S1mpl3n3ss" />
+	</connectionStrings>
 	<system.web>
 		<compilation debug="true">
 			<assemblies>
@@ -15,7 +15,7 @@
 			</assemblies>
 		</compilation>
 		<authentication mode="Windows"/>
-		<customErrors mode="RemoteOnly" defaultRedirect="oops.html">
+		<customErrors mode="Off" defaultRedirect="oops.html">
 			<error statusCode="403" redirect="oops.html" />
 			<error statusCode="404" redirect="oops.html" />
 		</customErrors>
