Added FormsAuthentication. Updated password stuff on the SiteUser object to make more sense. Refactored a ton of the domain layer. Added error handling. Created new login page for the default case.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -4,23 +4,33 @@
 		<add key="Amazon.AWSECommerceService" value="http://soap.amazon.com/onca/soap?Service=AWSECommerceService" />
 		<add key="encryptConnectionStrings" value="false" />
 	</appSettings>
+	
 	<connectionStrings>
 		<remove name="longueurConnectionString" />
-		<add name="longueurConnectionString" connectionString="Data Source=sql331.mysite4now.com;Initial Catalog=longueur;Persist Security Info=True;User ID=adparadox;Password=_S1mpl3n3ss" />
+		<add name="longueurConnectionString" connectionString="Data Source=ADAM-WIN;Initial Catalog=Longueur;Integrated Security=True" />
 	</connectionStrings>
+	
 	<system.web>
 		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
 			</assemblies>
 		</compilation>
-		<authentication mode="Windows"/>
-		<customErrors mode="Off" defaultRedirect="oops.html">
+		
+		<customErrors mode="Off"  defaultRedirect="oops.html">
 			<error statusCode="403" redirect="oops.html" />
 			<error statusCode="404" redirect="oops.html" />
 		</customErrors>
+		
 		<httpModules>
 			<add name="MagicAjax" type="MagicAjax.MagicAjaxModule, MagicAjax"/>
 		</httpModules>
+		
+		<authentication	mode="Forms">
+			<forms name="Fookie" loginUrl="login.aspx" protection="All" path="/" />
+		</authentication>
+		<authorization>
+			<allow users="*"/>
+		</authorization>
 	</system.web>
 </configuration>
