--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -6,7 +6,23 @@
   <FtpServerType>Serv-U FTP-Server v2.5i for WinSock ...</FtpServerType>
   <Validated>true</Validated>
   <MsFtpUserPre>false</MsFtpUserPre>
-  <StringReplacements />
+  <StringReplacements>
+    <StringReplacement>
+      <FilePattern>\Web.Config</FilePattern>
+      <LookFor>Data Source=ADAM-WIN;Initial Catalog=Longueur;Integrated Security=True</LookFor>
+      <ReplaceWith>Data Source=sql331.mysite4now.com;Initial Catalog=longueur;Persist Security Info=True;User ID=adparadox;Password=_S1mpl3n3ss</ReplaceWith>
+    </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Web.Config</FilePattern>
+      <LookFor>debug="true"</LookFor>
+      <ReplaceWith>debug="false"</ReplaceWith>
+    </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Web.Config</FilePattern>
+      <LookFor>customErrors mode="Off"</LookFor>
+      <ReplaceWith>customErrors mode="On"</ReplaceWith>
+    </StringReplacement>
+  </StringReplacements>
   <FtpPort>21</FtpPort>
   <FtpTimeout>20</FtpTimeout>
   <IgnoreFilters>
@@ -53,7 +69,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-07T23:19:04.081752-04:00</dateTime>
+        <dateTime>2007-05-08T23:43:20.3893184-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -101,7 +117,7 @@
         <string>\app_code\data.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T23:19:05.3736096-04:00</dateTime>
+        <dateTime>2007-05-08T23:43:22.2119392-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -109,7 +125,7 @@
         <string>\app_code\downloaddata.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:11:06.7540256-04:00</dateTime>
+        <dateTime>2007-05-08T23:43:22.78276-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -133,7 +149,7 @@
         <string>\app_code\siteuser.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:11:09.067352-04:00</dateTime>
+        <dateTime>2007-05-08T23:43:24.4952224-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -141,7 +157,7 @@
         <string>\app_code\usertype.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:11:09.668216-04:00</dateTime>
+        <dateTime>2007-05-08T23:43:25.0960864-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -189,7 +205,7 @@
         <string>\global.asax</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:17:53.8359744-04:00</dateTime>
+        <dateTime>2007-05-08T23:43:25.8071088-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -205,7 +221,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-05-07T23:19:29.4482272-04:00</dateTime>
+        <dateTime>2007-05-08T23:38:11.8270064-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -214,6 +230,70 @@
       </key>
       <value>
         <dateTime>2007-05-07T23:46:23.7026448-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin</string>
+      </key>
+      <value>
+        <dateTime>2007-05-08T23:43:20.0688576-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\indielyrics</string>
+      </key>
+      <value>
+        <dateTime>2007-05-08T20:54:09.27772-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\default.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-08T20:54:10.5495488-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\default.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-08T21:03:49.9647872-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\web.config</string>
+      </key>
+      <value>
+        <dateTime>2007-05-08T23:43:21.080312-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\indielyricsdata.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-08T23:43:23.6940704-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\indielyrics\login.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-08T20:54:16.2677712-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\login.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-08T21:09:28.3937696-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
