Add login control. Add a bunch of admin pages. Rename slog master page.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -32,5 +32,11 @@
 		<authorization>
 			<allow users="*"/>
 		</authorization>
+
+		<pages>
+			<controls>
+				<add tagPrefix="a" src="~/Controls/Login.ascx" tagName="login"/>
+			</controls>
+		</pages>
 	</system.web>
 </configuration>
