Update slog so that there is no image. Updated todo.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -69,7 +69,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:11.2578224-04:00</dateTime>
+        <dateTime>2007-05-14T23:37:35.5396-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -117,7 +117,7 @@
         <string>\app_code\data.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:20.7715024-04:00</dateTime>
+        <dateTime>2007-05-14T23:23:59.0333824-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -149,7 +149,7 @@
         <string>\app_code\siteuser.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-08T23:43:24.4952224-04:00</dateTime>
+        <dateTime>2007-05-14T23:29:54.9074496-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -157,7 +157,7 @@
         <string>\app_code\usertype.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-08T23:43:25.0960864-04:00</dateTime>
+        <dateTime>2007-05-14T23:30:54.3867008-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -237,7 +237,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:10.9173328-04:00</dateTime>
+        <dateTime>2007-05-14T23:36:43.501048-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -245,7 +245,7 @@
         <string>\indielyrics</string>
       </key>
       <value>
-        <dateTime>2007-05-08T20:54:09.27772-04:00</dateTime>
+        <dateTime>2007-05-14T23:23:54.6971472-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -309,7 +309,7 @@
         <string>\admin\admin.master</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:12.2592624-04:00</dateTime>
+        <dateTime>2007-05-14T23:24:07.2451904-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -317,7 +317,7 @@
         <string>\admin\admin.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:12.8601264-04:00</dateTime>
+        <dateTime>2007-05-14T23:24:07.8460544-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -365,7 +365,7 @@
         <string>\app_code\admindata.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:19.7700624-04:00</dateTime>
+        <dateTime>2007-05-14T23:23:57.6313664-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -390,6 +390,118 @@
       </key>
       <value>
         <dateTime>2007-05-09T22:30:23.5755344-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\users.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:23:55.9289184-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\users.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:23:56.9303584-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\indielyrics\edit_user.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:24:00.5555712-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\slog.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:36:44.151984-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\slog.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:36:44.953136-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\slogdata.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:37:36.2205792-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\slog</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:39:09.452088-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\slog\images</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:39:10.2932976-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\slog\default.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:39:11.0443776-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\slog\default.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:39:11.6452416-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\slog\images\button.gif</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:39:12.3462496-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\slog\slog.master</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:39:13.0472576-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\slog\slog.master.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:39:13.7482656-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\slog\styles.css</string>
+      </key>
+      <value>
+        <dateTime>2007-05-14T23:39:14.3491296-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
