Complete the namespace changes, seperating all of the data and membership classes out. Updated all pages that that touched.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -45,7 +45,7 @@
         <string>\software</string>
       </key>
       <value>
-        <dateTime>2007-05-07T23:46:22.0102112-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:16.685824-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -53,7 +53,7 @@
         <string>\software\download.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:06:22.4823936-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:46.1218752-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -61,7 +61,7 @@
         <string>\software\download.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T23:42:37.4381472-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:46.7227392-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -69,7 +69,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:37:35.5396-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:13.4511728-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -101,7 +101,7 @@
         <string>\app_code\amazoninfo.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:11:03.9399792-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:27.7955232-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -109,7 +109,7 @@
         <string>\app_code\constants.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:17:53.124952-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:28.3963872-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -141,7 +141,7 @@
         <string>\app_code\searchtype.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:11:08.366344-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:36.2076192-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -165,7 +165,7 @@
         <string>\app_code\wittisms.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:11:10.26908-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:36.8084832-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -205,7 +205,7 @@
         <string>\global.asax</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:22.8945552-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:39.4122272-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -213,7 +213,7 @@
         <string>\oops.html</string>
       </key>
       <value>
-        <dateTime>2007-05-07T22:11:20.9945024-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:41.3149632-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -221,7 +221,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:24.7772624-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:48.4251872-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -237,7 +237,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:36:43.501048-04:00</dateTime>
+        <dateTime>2007-05-17T22:27:04.4382128-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -253,7 +253,7 @@
         <string>\admin\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:13.4609904-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:18.8927216-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -261,7 +261,7 @@
         <string>\admin\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:14.2621424-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:19.5837152-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -269,7 +269,7 @@
         <string>\admin\web.config</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:19.0690544-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:26.3935072-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -293,7 +293,7 @@
         <string>\login.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:24.1763984-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:40.7140992-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -301,7 +301,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:11.5882976-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:15.2537648-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -309,7 +309,7 @@
         <string>\admin\admin.master</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:24:07.2451904-04:00</dateTime>
+        <dateTime>2007-05-17T22:27:05.269408-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -317,7 +317,7 @@
         <string>\admin\admin.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:24:07.8460544-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:18.2818432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -325,7 +325,7 @@
         <string>\admin\downloads.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:15.1634384-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:20.1845792-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -333,7 +333,7 @@
         <string>\admin\downloads.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:16.6856272-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:20.7854432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -341,7 +341,7 @@
         <string>\admin\errors.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:17.2664624-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:21.4864512-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -349,7 +349,7 @@
         <string>\admin\errors.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:17.8673264-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:22.0873152-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -357,7 +357,7 @@
         <string>\admin\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:18.4681904-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:24.1903392-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -381,7 +381,7 @@
         <string>\controls\login.ascx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:22.06336-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:37.5094912-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -389,7 +389,7 @@
         <string>\login.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-09T22:30:23.5755344-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:40.1132352-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -397,7 +397,7 @@
         <string>\admin\users.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:23:55.9289184-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:24.8913472-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -405,7 +405,7 @@
         <string>\admin\users.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:23:56.9303584-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:25.7926432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -421,7 +421,7 @@
         <string>\admin\slog.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:36:44.151984-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:22.6981936-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -429,7 +429,7 @@
         <string>\admin\slog.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:36:44.953136-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:23.5894752-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -445,7 +445,7 @@
         <string>\slog</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:39:09.452088-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:15.7144272-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -453,7 +453,7 @@
         <string>\slog\images</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:39:10.2932976-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:16.135032-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -461,7 +461,7 @@
         <string>\slog\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:39:11.0443776-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:42.1161152-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -469,7 +469,7 @@
         <string>\slog\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:39:11.6452416-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:42.8171232-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -477,7 +477,7 @@
         <string>\slog\images\button.gif</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:39:12.3462496-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:43.5181312-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -485,7 +485,7 @@
         <string>\slog\slog.master</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:39:13.0472576-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:44.2191392-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -493,7 +493,7 @@
         <string>\slog\slog.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:39:13.7482656-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:44.8300176-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -501,7 +501,103 @@
         <string>\slog\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-14T23:39:14.3491296-04:00</dateTime>
+        <dateTime>2007-05-17T22:12:45.4208672-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:14.232296-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\membership</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:14.9132752-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\admin.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:29.0973952-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\base.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:29.9986912-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\download.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:30.5995552-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\indielyrics.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:31.6009952-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\slog.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:32.3120176-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\user.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:32.8928528-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\membership\siteuser.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:33.9043072-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\membership\siteusers.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:34.5051712-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\membership\usertype.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:35.2963088-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\todo.txt</string>
+      </key>
+      <value>
+        <dateTime>2007-05-17T22:12:47.443776-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
