Rename Hillellies to Hillellis. Prevent request validation in admin pages.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -69,7 +69,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:13.4511728-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:25.9960736-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -205,7 +205,7 @@
         <string>\global.asax</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:39.4122272-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:55.111664-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -237,7 +237,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:27:04.4382128-04:00</dateTime>
+        <dateTime>2007-05-20T17:13:46.6457664-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -293,7 +293,7 @@
         <string>\login.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:40.7140992-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:56.713968-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -301,7 +301,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:15.2537648-04:00</dateTime>
+        <dateTime>2007-05-20T16:51:40.4568672-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -309,7 +309,7 @@
         <string>\admin\admin.master</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:27:05.269408-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:34.4081696-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -357,7 +357,7 @@
         <string>\admin\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:24.1903392-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:36.6513952-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -389,7 +389,7 @@
         <string>\login.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:40.1132352-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:55.812672-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -397,7 +397,7 @@
         <string>\admin\users.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:24.8913472-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:39.0047792-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -405,7 +405,7 @@
         <string>\admin\users.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:25.7926432-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:40.1063632-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -421,7 +421,7 @@
         <string>\admin\slog.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:22.6981936-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:35.0991632-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -429,7 +429,7 @@
         <string>\admin\slog.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:23.5894752-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:36.0004592-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -445,7 +445,7 @@
         <string>\slog</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:15.7144272-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:30.1019776-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -453,7 +453,7 @@
         <string>\slog\images</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:16.135032-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:30.712856-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -461,7 +461,7 @@
         <string>\slog\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:42.1161152-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:58.6267184-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -469,7 +469,7 @@
         <string>\slog\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:42.8171232-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:59.518-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -477,7 +477,7 @@
         <string>\slog\images\button.gif</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:43.5181312-04:00</dateTime>
+        <dateTime>2007-05-20T16:32:00.51944-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -485,7 +485,7 @@
         <string>\slog\slog.master</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:44.2191392-04:00</dateTime>
+        <dateTime>2007-05-20T16:32:01.3105776-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -493,7 +493,7 @@
         <string>\slog\slog.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:44.8300176-04:00</dateTime>
+        <dateTime>2007-05-20T16:32:01.921456-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -501,7 +501,7 @@
         <string>\slog\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:45.4208672-04:00</dateTime>
+        <dateTime>2007-05-20T16:32:02.622464-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -509,7 +509,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:14.232296-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:26.2364192-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -525,7 +525,7 @@
         <string>\app_code\data\admin.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:29.0973952-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:40.8073712-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -533,7 +533,7 @@
         <string>\app_code\data\base.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:29.9986912-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:41.7086672-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -541,7 +541,7 @@
         <string>\app_code\data\download.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:30.5995552-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:44.3124112-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -549,7 +549,7 @@
         <string>\app_code\data\indielyrics.cs</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:31.6009952-04:00</dateTime>
+        <dateTime>2007-05-20T16:31:45.2137072-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -597,7 +597,223 @@
         <string>\todo.txt</string>
       </key>
       <value>
-        <dateTime>2007-05-17T22:12:47.443776-04:00</dateTime>
+        <dateTime>2007-05-20T16:32:09.5324-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\blog</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:27.1176864-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:27.7986656-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:28.6699184-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\membership</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:29.4310128-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:51:40.7973568-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\images</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:31.4839648-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\thehillellis.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T17:13:47.8211808-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\admin\thehillellis.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:38.2036272-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\blog\iblog.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:42.4096752-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\blog\slog.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:43.0105392-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\blog\thehillellis.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:43.6114032-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\data\membership.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:45.8145712-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\entries.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:46.4154352-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\entry.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:47.300432-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\membership\siteuser.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:48.301872-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\membership\siteusers.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:48.902736-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\membership\usertype.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:31:49.5036-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\controls\hillelliscontent.ascx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:51:41.6585952-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\controls\hillelliscontent.ascx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:51:42.2594592-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\default.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:32:03.323472-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\default.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:32:03.924336-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\images\cupcake_t.png</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:32:04.7355024-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\images\logo.png</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:32:05.827072-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\images\puppup_t.png</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:32:06.77844-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\styles.css</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:32:07.5195056-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\thehillellis.master</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:51:42.9604672-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\thehillellis.master.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-05-20T16:32:08.731248-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
